preprocessor: adding pipe for preprocessor

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "80da7f8c",
    "metadata": {},
    "outputs": [],
@@ -12,8 +12,12 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split, KFold, StratifiedKFold\n",
-    "from sklearn.preprocessing import StandardScaler, MinMaxScaler, OneHotEncoder, LabelEncoder\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler, OneHotEncoder, LabelEncoder, RobustScaler\n",
     "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.metrics import accuracy_score, f1_score, root_mean_squared_error, mean_absolute_error\n",
+    "\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -742,6 +746,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "b5e18799",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# after see the dist of NaN, i decide to drop some cols\n",
+    "col_to_drop = ['Academic Pressure','CGPA','Study Satisfaction']\n",
+    "df.drop(columns=col_to_drop, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8df8866c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(140700, 16)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "42f58b9e",
    "metadata": {},
@@ -1150,9 +1187,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "98b00bb5",
+   "metadata": {},
+   "source": [
+    "# Building preprocess phase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e1c9b897",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_preprocessor(cat_cols,num_cols,strategy_num='mean',strategy_cat='most_frequent',encoding='onehot',scaling=False):\n",
+    "    transformers = []\n",
+    "\n",
+    "    if cat_cols:\n",
+    "        cat_pipeline = Pipeline([\n",
+    "            ('imputer',SimpleImputer(strategy=strategy_cat)),\n",
+    "            ('encoder',OneHotEncoder(handle_unknown='ignore',sparse=False) if encoding=='onehot' else ('encoder','passthrough'))\n",
+    "        ])\n",
+    "\n",
+    "    if num_cols:\n",
+    "        num_pipeline = Pipeline([\n",
+    "            ('imputer',SimpleImputer(strategy=strategy_num)),\n",
+    "            ('scalier',RobustScaler() if scaling else 'passthrough')\n",
+    "        ])\n",
+    "\n",
+    "    return ColumnTransformer(transformers=transformers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13d989cb",
+   "metadata": {},
+   "source": [
+    "# Modeling "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b1fffc20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_models(X,y,models,task_type,preprocessor,n_splits=5):\n",
+    "    kf = KFold(n_splits=n_splits,shuffle=True,random_state=42)\n",
+    "    results = {name: [] for name in models}\n",
+    "\n",
+    "    for fold, (train_idx,val_idx) in enumerate(kf.split(X)):\n",
+    "        X_train, X_val = X.iloc[train_idx], X.iloc[val_idx]\n",
+    "        y_train, y_val = y.iloc[train_idx], y.iloc[val_idx]\n",
+    "\n",
+    "        # udah di split, sekarang msuk ke preprocessingnya\n",
+    "        X_train_proc = preprocessor.fit_transform(X_train)\n",
+    "        X_val_proc = preprocessor.transform(X_val)\n",
+    "\n",
+    "        for name, model in models.items():\n",
+    "            model.fit(X_train_proc,y_train)\n",
+    "            preds = model.predict(X_val_proc)\n",
+    "\n",
+    "        if task_type == 'category':\n",
+    "            acc = accuracy_score(y_val, preds)\n",
+    "            f1 = f1_score(y_val, preds, average=\"macro\")\n",
+    "            results[name].append({\"accuracy\": acc, \"f1\": f1})\n",
+    "        else:\n",
+    "            rmse = root_mean_squared_error(y_val, preds, squared=False)\n",
+    "            mae = mean_absolute_error(y_val, preds)\n",
+    "            results[name].append({\"rmse\": rmse, \"mae\": mae})\n",
+    "\n",
+    "    return results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1c9b897",
+   "id": "10cd84d9",
    "metadata": {},
    "outputs": [],
    "source": []
