add modeling phase

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -1269,6 +1269,55 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f3cbcf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # coba contoh aja kalo kita ad di dir baru buat mini EDA (CUMA ISENG SERIUSSS....)\n",
+    "\n",
+    "# def univariate_eda(df,cat_cols,num_cols):\n",
+    "#     for col in cat_cols:\n",
+    "#         plt.figure(figsize=(10,4))\n",
+    "#         sns.countplot(data=df,x=col)\n",
+    "#         plt.title()\n",
+    "#         plt.tight_layout()\n",
+    "#         plt.show()\n",
+    "\n",
+    "\n",
+    "#     for col in num_cols:\n",
+    "#         plt.figure()\n",
+    "#         sns.histplot(df[col],kde=True)\n",
+    "\n",
+    "#     # sama smua ajaa terus kalo bivariate gimana?\n",
+    "\n",
+    "# def bivariate_eda(df,num_cols):\n",
+    "#     # kita cari dlu corrnya masing masing\n",
+    "#     corr = df[num_cols].corr()\n",
+    "#     sns.heatmap(corr, annot=True, fmt='.2f')\n",
+    "#     lainya sama ajaaa\n",
+    "\n",
+    "\n",
+    "# kf = KFold()\n",
+    "\n",
+    "# for fold,(train_idx,val_idx) in enumerate(kf.split(X)):\n",
+    "#     # dari sini kita split dlu\n",
+    "#     X_train, X_val = X.iloc[train_idx], lalalala\n",
+    "\n",
+    "#     # baru dari ini kita preprocess dlu\n",
+    "#     X_train_proc = preprocessor.fit_transform()\n",
+    "\n",
+    "\n",
+    "#     # barulah dari sini kita masuk ke trainingnya\n",
+    "#     model.fit(X_train_proc,y_train)\n",
+    "#     preds = model.predict(X_val_proc)\n",
+    "\n",
+    "#     if task == 'cat':\n",
+    "#         acc = accuracy_score(y_val, preds)"
+   ]
   }
  ],
  "metadata": {
